--- a/WpfApplication1/WpfApplication1/DigitalPass.xaml
+++ b/WpfApplication1/WpfApplication1/DigitalPass.xaml
@@ -7,7 +7,7 @@
       xmlns:local="clr-namespace:SchoolSafeID"
       xmlns:wpfx1="http://schemas.xceed.com/wpf/xaml/toolkit"
       mc:Ignorable="d"
-      Title="Get Digital Pass">
+      Title="Get Digital Pass" Loaded="Page_Loaded" Style="{StaticResource SSIDPage}">
 
     <DockPanel LastChildFill="True">
 
@@ -24,16 +24,16 @@
         </StackPanel>
 
 
-        <StackPanel DockPanel.Dock="Left" Width="509" VerticalAlignment="Center">
+        <StackPanel DockPanel.Dock="Left" Width="450" VerticalAlignment="Center">
             <Image Width="372" Height="509" Source="Resources/digit_pass_preview.png" ToolTip="Digital Pass" />
         </StackPanel>
 
 
-        <StackPanel Width="100" DockPanel.Dock="Right"></StackPanel>
+        <StackPanel DockPanel.Dock="Right"></StackPanel>
 
 
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top"  Margin="0,30,0,0">
-            <TextBlock Style="{StaticResource MaterialDesignDisplay3TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" Margin="0,0,0,10" Text="Save Time"></TextBlock>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top"  Margin="0,35,0,0">
+            <TextBlock Foreground="#088F40" FontSize="70" LineHeight="50" FontWeight="SemiBold" Style="{StaticResource MaterialDesignDisplay3TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" Margin="0" Text="Save Time"></TextBlock>
 
             <StackPanel>
                 <wpfx1:MaskedTextBox Mask="(000) 000-0000" Style="{StaticResource MsTextField}" Name="txt_Phone"/>
@@ -42,30 +42,30 @@
             </StackPanel>
 
             <StackPanel Orientation="Horizontal">
-                <Button Name="btnCreateDigtalPass" Style="{StaticResource MyButton}" Content="SEND MY PASS AND CONTINUE" Width="430" Margin="0 10 0 0" Click="btnCreateDigtalPass_Click"/>
-                <Button Name="btnNoThanks" Style="{StaticResource MyButton}" Content="NO THANKS" Width="250" Margin="20 10 0 0" Click="btnNoThanks_Click"/>
+                <Button Name="btnCreateDigtalPass" Style="{StaticResource MyButton}" Content="SEND MY PASS AND CONTINUE" Width="420" Margin="0 10 0 0" Click="btnCreateDigtalPass_Click"/>
+                <Button Name="btnNoThanks" Style="{StaticResource MyButton}" Content="NO, THANKS" Width="210" Margin="20 10 0 0" Click="btnNoThanks_Click"/>
             </StackPanel>
 
-            <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" HorizontalAlignment="Left" Margin="0,15,0,0" Text="Receive the Digital Pass"></TextBlock>
+            <TextBlock Foreground="#088F40" FontSize="36" LineHeight="30" FontWeight="600" Style="{StaticResource MaterialDesignDisplay1TextBlock}" HorizontalAlignment="Left" Margin="0,15,0,0" Text="Receive the Digital Pass"></TextBlock>
             
-            <StackPanel Margin="20,5,0,0">
+            <StackPanel Margin="25,5,0,0">
                 <BulletDecorator Margin="0,3">
                     <BulletDecorator.Bullet>
                         <Image Width="18" Height="18" Source="Resources/select.png"></Image>
                     </BulletDecorator.Bullet>
-                    <TextBlock Text="Faster Check-In" FontSize="18" Margin="5,0,0,0"></TextBlock>
+                    <TextBlock Text="Faster Check-In" FontSize="24" Margin="8,0,0,0"></TextBlock>
                 </BulletDecorator>
                 <BulletDecorator Margin="0,3">
                     <BulletDecorator.Bullet>
                         <Image Width="18" Height="18" Source="Resources/select.png"></Image>
                     </BulletDecorator.Bullet>
-                    <TextBlock Text="No License Needed" FontSize="18" Margin="5,0,0,0"></TextBlock>
+                    <TextBlock Text="No License Needed" FontSize="24" Margin="8,0,0,0"></TextBlock>
                 </BulletDecorator>
                 <BulletDecorator Margin="0,3">
                     <BulletDecorator.Bullet>
                         <Image Width="18" Height="18" Source="Resources/select.png"></Image>
                     </BulletDecorator.Bullet>
-                    <TextBlock Text="Receive School Notifications" FontSize="18" Margin="5,0,0,0"></TextBlock>
+                    <TextBlock Text="Receive School Notifications" FontSize="24" Margin="8,0,0,0"></TextBlock>
                 </BulletDecorator>
             </StackPanel>
 
