--- a/WpfApplication1/WpfApplication1/ScanLicense.xaml
+++ b/WpfApplication1/WpfApplication1/ScanLicense.xaml
@@ -8,7 +8,7 @@
       xmlns:wpfx1="http://schemas.xceed.com/wpf/xaml/toolkit"
       mc:Ignorable="d"       
       FocusManager.FocusedElement="{Binding ElementName=txtBarcodeData}"
-      Title="Scan License" Loaded="Page_Loaded" Focusable="True">
+      Title="Scan License" Loaded="Page_Loaded" Focusable="True" Style="{StaticResource SSIDPage}">
 
     <Page.CommandBindings>
         <CommandBinding Command="ApplicationCommands.Open" Executed="Executed_Open" CanExecute="CanExecute_Open"/>
@@ -32,9 +32,9 @@
             </StackPanel>
         </StackPanel>
 
-        <StackPanel DockPanel.Dock="Left" Width="450" HorizontalAlignment="Center" VerticalAlignment="Top"  Margin="0,70,0,0">
+        <StackPanel DockPanel.Dock="Left" Width="420" HorizontalAlignment="Center" VerticalAlignment="Top"  Margin="0,70,0,0">
             <Image Width="369" Height="261" HorizontalAlignment="Right" Margin="0 16 0 0" Source="Resources/barcode_scanner.png" />
-            <TextBlock HorizontalAlignment="Center" Style="{StaticResource MaterialDesignDisplay1TextBlock}" Margin="65 10 0 0"  TextWrapping="Wrap" FontSize="20" Foreground="#249c24" Text="Press scan button on device if it does not automatically scan."></TextBlock>
+            <TextBlock HorizontalAlignment="Center" Style="{StaticResource MaterialDesignDisplay1TextBlock}" Margin="40 10 0 0"  TextWrapping="Wrap" FontSize="20" Foreground="#249c24" Text="Press scan button on device if it does not automatically scan."></TextBlock>
 
             <Image Margin="0 50 0 0" Width="369" Height="111" HorizontalAlignment="Right" Source="Resources/pdf417.png" />
             <TextBlock HorizontalAlignment="Center" Margin="30 10 0 0" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" FontSize="20" Text="Sample barcode on back of license."></TextBlock>
@@ -45,16 +45,15 @@
 
 
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0">
-            <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="36" Margin="0,0,0,10" Text="Scan Drivers License or Frequent Visitor ID"></TextBlock>
+            <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="36" Margin="0,0,0,7" Text="Scan Drivers License or Frequent Visitor ID"></TextBlock>
 
             <StackPanel>
                 <wpfx1:WatermarkTextBox Style="{StaticResource WmTextField}" Name="txt_FirstName" Watermark="Legal First Name" IsEnabled="False" />
                 <wpfx1:WatermarkTextBox Style="{StaticResource WmTextField}" Name="txt_LastName" Watermark="Legal Last Name" IsEnabled="False" />
                 <wpfx1:MaskedTextBox Mask="00/00/0000" Style="{StaticResource MsTextField}" Name="txt_DateOfBirth" IsEnabled="False"/>
                 <TextBox TextWrapping="Wrap" Width="0" Name="txtBarcodeData" Text="" Opacity="0" Focusable="True" Height="0" KeyUp="txtBarcodeData_KeyUp" TextChanged="txtBarcodeData_TextChanged" />
-                <!--<wpfx1:DateTimePicker TextAlignment="Left" AutoCloseCalendar="True" TimePickerVisibility="Hidden" Format="ShortDate" Style="{StaticResource MyDateTextField}" Name="txt_dob" Watermark="Date of Birth" />-->                
-                <Button Name="btnConfirm" IsEnabled="False" Style="{StaticResource MyButton}" Content="CONFIRM AND SUBMIT" Width="700" Margin="0 10 0 20" Click="Button_Click"/>
-                <TextBlock Width="700" TextBlock.LineHeight="36" FontSize="26" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" Text="Hold your drivers license up to the scanning device as shown. The back of your license should face the scanning device so that it can read the 2D bar code. Once you hear the beep, please confirm your first name, last name and date of birth. Hit submit to continue."></TextBlock>
+                <Button Name="btnConfirm" IsEnabled="False" Style="{StaticResource MyButton}" Content="CONFIRM AND SUBMIT" Width="650" Margin="0 10 0 40" Click="Button_Click"/>
+                <TextBlock Width="650" TextBlock.LineHeight="36" FontSize="24" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" Text="Hold your drivers license up to the scanning device as shown. The back of your license should face the scanning device so that it can read the 2D bar code. Once you hear the beep, please confirm your first name, last name and date of birth. Hit submit to continue."></TextBlock>
             </StackPanel>
 
         </StackPanel>
