--- a/WpfApplication1/WpfApplication1/TakePhoto.xaml
+++ b/WpfApplication1/WpfApplication1/TakePhoto.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SchoolSafeID"
       mc:Ignorable="d"       
-      Title="Take Photo" Loaded="page_Loaded" Unloaded="Page_Unloaded">
+      Title="Take Photo" Loaded="page_Loaded" Unloaded="Page_Unloaded" Style="{StaticResource SSIDPage}">
 
     <DockPanel LastChildFill="True">
 
