--- a/WpfApplication1/WpfApplication1/ModalWindow.xaml
+++ b/WpfApplication1/WpfApplication1/ModalWindow.xaml
@@ -13,6 +13,7 @@
         TextOptions.TextRenderingMode="Auto"                
         FontFamily="{DynamicResource MaterialDesignFont}"
         Padding="20" ResizeMode="NoResize"
+        FocusManager.FocusedElement="{Binding ElementName=txt_password}"
         Title="Office Use Only" Icon="favicon.ico" HorizontalAlignment="Center" VerticalAlignment="Center" 
         HorizontalContentAlignment="Center" Width="700" Height="350" WindowStartupLocation="CenterOwner">
     <Grid>
