--- a/WpfApplication1/WpfApplication1/PrintCompleted.xaml
+++ b/WpfApplication1/WpfApplication1/PrintCompleted.xaml
@@ -7,7 +7,7 @@
       xmlns:local="clr-namespace:SchoolSafeID"
       xmlns:wpfx1="http://schemas.xceed.com/wpf/xaml/toolkit"
       mc:Ignorable="d"       
-      Title="Print Completed">
+      Title="Print Completed" Style="{StaticResource SSIDPage}">
 
     <DockPanel LastChildFill="True">
 
@@ -23,30 +23,42 @@
             </StackPanel>
         </StackPanel>
 
-        <StackPanel DockPanel.Dock="Left" Width="450" VerticalAlignment="Center">
-            <Image Width="332" Height="332" HorizontalAlignment="Right" Source="Resources/label_printer.png" />
-        </StackPanel>
+        <StackPanel DockPanel.Dock="Left"></StackPanel>
 
         <StackPanel DockPanel.Dock="Right"></StackPanel>
 
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="36" Margin="0,0,0,20" Text="Thank you! Check-in completed."></TextBlock>
+        <Grid Width="1200" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-            <StackPanel>
-                <TextBlock Width="700" TextBlock.LineHeight="36" FontSize="26" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap">                
+            <Image Grid.Column="0" Width="332" Height="332" HorizontalAlignment="Center" Source="Resources/label_printer.png" />
+
+            <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top">
+                <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="36" Margin="0,0,0,20" Text="Thank you! Check-in completed."></TextBlock>
+
+                <StackPanel>
+                    <TextBlock Width="700" TextBlock.LineHeight="30" FontSize="26" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap">                
                     You have been successful signed in. Be sure to check out at this kiosk when you leave.
-                    <LineBreak />                    
+                    <LineBreak />  
+                    <LineBreak />  
 
                     Please take the printed sticker and affix it to yourself in a visible place during your stay.
                     <LineBreak />
+                    <LineBreak />  
                     <LineBreak />
                     Thanks!
 
-                </TextBlock>
+                    </TextBlock>
+
+                </StackPanel>
 
             </StackPanel>
-
-        </StackPanel>
+        </Grid>
 
     </DockPanel>
 
