--- a/WpfApplication1/WpfApplication1/App.xaml
+++ b/WpfApplication1/WpfApplication1/App.xaml
@@ -17,8 +17,8 @@
 
             <Style x:Key="SSIDPage" TargetType="Page">
                 <Setter Property="FontFamily" Value="fonts/Lato-Bold.ttf" />
-                <Setter Property="Width" Value="1200" />
-                <Setter Property="Background" Value="Red" />
+                <!--<Setter Property="Width" Value="1200" />-->
+                <!--<Setter Property="Background" Value="Red" />-->
             </Style>
 
             <Style TargetType="{x:Type TextBlock}">
@@ -78,7 +78,7 @@
                 <Setter Property="Width" Value="650" />
                 <Setter Property="Height" Value="70" />
                 <Setter Property="FontSize" Value="34" />
-                <Setter Property="Padding" Value="10" />
+                <Setter Property="Padding" Value="15" />
                 <Setter Property="Margin" Value="0 8" />
                 <Setter Property="VerticalAlignment" Value="Center" />
                 <Setter Property="BorderThickness" Value="1" />
@@ -88,7 +88,7 @@
                 <Setter Property="Width" Value="650" />
                 <Setter Property="Height" Value="70" />
                 <Setter Property="FontSize" Value="34" />
-                <Setter Property="Padding" Value="10" />
+                <Setter Property="Padding" Value="15" />
                 <Setter Property="Margin" Value="0 8" />
                 <Setter Property="VerticalAlignment" Value="Center" />
                 <Setter Property="BorderThickness" Value="1" />
@@ -98,7 +98,7 @@
                 <Setter Property="Width" Value="650" />
                 <Setter Property="Height" Value="70" />
                 <Setter Property="FontSize" Value="34" />
-                <Setter Property="Padding" Value="10" />
+                <Setter Property="Padding" Value="15" />
                 <Setter Property="Margin" Value="0 8" />
                 <Setter Property="VerticalAlignment" Value="Center" />
                 <Setter Property="BorderThickness" Value="1" />
@@ -113,7 +113,7 @@
                 <Setter Property="Width" Value="300" />
                 <Setter Property="Height" Value="70" />
                 <Setter Property="FontSize" Value="34" />
-                <Setter Property="Padding" Value="10" />
+                <Setter Property="Padding" Value="15" />
                 <Setter Property="Margin" Value="0,8" />
                 <Setter Property="VerticalAlignment" Value="Center" />
                 <Setter Property="BorderThickness" Value="1" />
@@ -124,7 +124,7 @@
                 <Setter Property="Width" Value="650" />
                 <Setter Property="Height" Value="70" />
                 <Setter Property="FontSize" Value="34" />
-                <Setter Property="Padding" Value="10" />
+                <Setter Property="Padding" Value="15" />
                 <Setter Property="Margin" Value="0 8" />
                 <Setter Property="VerticalAlignment" Value="Center" />
                 <Setter Property="BorderThickness" Value="1" />
