--- a/WpfApplication1/WpfApplication1/ScanLicense.xaml
+++ b/WpfApplication1/WpfApplication1/ScanLicense.xaml
@@ -32,31 +32,40 @@
             </StackPanel>
         </StackPanel>
 
-        <StackPanel DockPanel.Dock="Left" Width="420" HorizontalAlignment="Center" VerticalAlignment="Top"  Margin="0,70,0,0">
-            <Image Width="369" Height="261" HorizontalAlignment="Right" Margin="0 16 0 0" Source="Resources/barcode_scanner.png" />
-            <TextBlock HorizontalAlignment="Center" Style="{StaticResource MaterialDesignDisplay1TextBlock}" Margin="40 10 0 0"  TextWrapping="Wrap" FontSize="20" Foreground="#249c24" Text="Press scan button on device if it does not automatically scan."></TextBlock>
+        <StackPanel DockPanel.Dock="Left"></StackPanel>
 
-            <Image Margin="0 50 0 0" Width="369" Height="111" HorizontalAlignment="Right" Source="Resources/pdf417.png" />
-            <TextBlock HorizontalAlignment="Center" Margin="30 10 0 0" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" FontSize="20" Text="Sample barcode on back of license."></TextBlock>
-        </StackPanel>
-
-        
         <StackPanel DockPanel.Dock="Right"></StackPanel>
 
+        <Grid Width="1200" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="430"/>
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0">
-            <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="36" Margin="0,0,0,7" Text="Scan Drivers License or Frequent Visitor ID"></TextBlock>
+            <StackPanel Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,42,0,0">
+                <Image Width="369" Height="261" Margin="0 16 0 0" Source="Resources/barcode_scanner.png" />
+                <TextBlock HorizontalAlignment="Left" Style="{StaticResource MaterialDesignDisplay1TextBlock}" Margin="0 10 0 0"  TextWrapping="Wrap" FontSize="20" Foreground="#249c24" Text="Press scan button on device if it does not automatically scan."></TextBlock>
 
-            <StackPanel>
-                <wpfx1:WatermarkTextBox Style="{StaticResource WmTextField}" Name="txt_FirstName" Watermark="Legal First Name" IsEnabled="False" />
-                <wpfx1:WatermarkTextBox Style="{StaticResource WmTextField}" Name="txt_LastName" Watermark="Legal Last Name" IsEnabled="False" />
-                <wpfx1:MaskedTextBox Mask="00/00/0000" Style="{StaticResource MsTextField}" Name="txt_DateOfBirth" IsEnabled="False"/>
-                <TextBox TextWrapping="Wrap" Width="0" Name="txtBarcodeData" Text="" Opacity="0" Focusable="True" Height="0" KeyUp="txtBarcodeData_KeyUp" TextChanged="txtBarcodeData_TextChanged" />
-                <Button Name="btnConfirm" IsEnabled="False" Style="{StaticResource MyButton}" Content="CONFIRM AND SUBMIT" Width="650" Margin="0 10 0 40" Click="Button_Click"/>
-                <TextBlock Width="650" TextBlock.LineHeight="36" FontSize="24" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" Text="Hold your drivers license up to the scanning device as shown. The back of your license should face the scanning device so that it can read the 2D bar code. Once you hear the beep, please confirm your first name, last name and date of birth. Hit submit to continue."></TextBlock>
+                <Image Margin="0 50 0 0" Width="369" Height="111" HorizontalAlignment="Right" Source="Resources/pdf417.png" />
+                <TextBlock HorizontalAlignment="Center" Margin="0 10 0 0" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" FontSize="20" Text="Sample barcode on back of license."></TextBlock>
             </StackPanel>
 
-        </StackPanel>
+            <WrapPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top">
+                <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="35" Margin="0,0,0,7" Text="Scan Drivers License or Frequent Visitor ID"></TextBlock>
+
+                <StackPanel>
+                    <wpfx1:WatermarkTextBox InputScope="PersonalFullName" Style="{StaticResource WmTextField}" Name="txt_FirstName" Watermark="Legal First Name" IsEnabled="False" />
+                    <wpfx1:WatermarkTextBox InputScope="PersonalFullName" Style="{StaticResource WmTextField}" Name="txt_LastName" Watermark="Legal Last Name" IsEnabled="False" />
+                    <wpfx1:MaskedTextBox InputScope="Number" Mask="00/00/0000" Style="{StaticResource MsTextField}" Name="txt_DateOfBirth" IsEnabled="False"/>
+                    <TextBox InputMethod.IsInputMethodEnabled="False" TextWrapping="Wrap" Width="0" Name="txtBarcodeData" Text="" Opacity="0" Focusable="True" Height="0" KeyUp="txtBarcodeData_KeyUp" TextChanged="txtBarcodeData_TextChanged" />
+                    <Button Name="btnConfirm" IsEnabled="False" Style="{StaticResource MyButton}" Content="CONFIRM AND SUBMIT" Width="650" Margin="0 10 0 40" Click="Button_Click"/>
+                    <TextBlock Width="650" TextBlock.LineHeight="36" FontSize="24" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" Text="Hold your drivers license up to the scanning device as shown. The back of your license should face the scanning device so that it can read the 2D bar code. Once you hear the beep, please confirm your first name, last name and date of birth. Hit submit to continue."></TextBlock>
+                </StackPanel>
+            </WrapPanel>
+        </Grid>
 
     </DockPanel>
 
