--- a/WpfApplication1/WpfApplication1/SearchStudent.xaml
+++ b/WpfApplication1/WpfApplication1/SearchStudent.xaml
@@ -4,7 +4,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"    
       mc:Ignorable="d"             
-      Title="Search Student" Focusable="True">
+      FocusManager.FocusedElement="{Binding ElementName=cmbStudent}"
+      Title="Search Student" Focusable="True" Style="{StaticResource SSIDPage}">
 
     <DockPanel LastChildFill="True">
 
