--- a/WpfApplication1/WpfApplication1/StudentSigninReason.xaml
+++ b/WpfApplication1/WpfApplication1/StudentSigninReason.xaml
@@ -25,7 +25,7 @@
 
         <StackPanel DockPanel.Dock="Right"></StackPanel>
 
-        <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+        <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center" MaxWidth="1200">
 
             <TextBlock TextAlignment="Center" Width="960" Style="{StaticResource MaterialDesignDisplay1TextBlock}" Height="60"><Run Text="Reason for Sign In?"/></TextBlock>
             
