--- a/WpfApplication1/WpfApplication1/VisitorSignout.xaml
+++ b/WpfApplication1/WpfApplication1/VisitorSignout.xaml
@@ -24,30 +24,40 @@
             </StackPanel>
         </StackPanel>
 
-        <StackPanel DockPanel.Dock="Left" Width="450" HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="0,70,0,0">
-            <Image Width="369" Height="261" HorizontalAlignment="Center" Margin="0 16 0 0" Source="Resources/barcode_scanner.png" />
-            <TextBlock HorizontalAlignment="Center" Style="{StaticResource MaterialDesignDisplay1TextBlock}" Margin="0 10 0 0"  TextWrapping="Wrap" FontSize="20" Foreground="#249c24" Text="Press scan button on device if it does not automatically scan."></TextBlock>
-
-            <Image Margin="0 50 0 0" Width="369" Height="44" HorizontalAlignment="Right" Source="Resources/bar_code.png" />
-            <TextBlock HorizontalAlignment="Center" Margin="30 10 0 0" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" FontSize="20" Text="Sample barcode on Visitor ID"></TextBlock>
-        </StackPanel>
-
+        <StackPanel DockPanel.Dock="Left"></StackPanel>
 
         <StackPanel DockPanel.Dock="Right"></StackPanel>
 
+        <Grid Width="1200" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="430"/>
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20,0,0">
-            <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="36" Margin="0,0,0,10" Text="Scan Visitor or Student ID to Sign-out"></TextBlock>
+            <StackPanel Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,65,0,0">
+                <Image Width="369" Height="261" HorizontalAlignment="Center" Margin="0 16 0 0" Source="Resources/barcode_scanner.png" />
+                <TextBlock HorizontalAlignment="Center" Style="{StaticResource MaterialDesignDisplay1TextBlock}" Margin="0 10 0 0"  TextWrapping="Wrap" FontSize="20" Foreground="#249c24" Text="Press scan button on device if it does not automatically scan."></TextBlock>
 
-            <StackPanel>
-                <wpfx1:WatermarkTextBox Style="{StaticResource WmTextField}" Name="txt_FirstName" Watermark="First Name" IsEnabled="False" />
-                <wpfx1:WatermarkTextBox Style="{StaticResource WmTextField}" Name="txt_LastName" Watermark="Last Name" IsEnabled="False" />
-                <TextBox TextWrapping="Wrap" Width="0" Name="txtBarcodeData" Text="97370-v" Opacity="0" Focusable="True" Height="0" KeyUp="txtBarcodeData_KeyUp" TextChanged="txtBarcodeData_TextChanged" />
-                <Button Name="btnConfirm" IsEnabled="False" Style="{StaticResource MyButton}" Content="CONFIRM AND SUBMIT" Width="650" Margin="0 20 0 40" Click="Button_Click"/>
-                <TextBlock Width="650" TextBlock.LineHeight="36" FontSize="24" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" Text="To sign out, please hold the visitor ID up to the scanning device with the barcode facing the device. Once you hear the beep, your visitor ID has been scanned properly. Press Submit to continue."></TextBlock>
+                <Image Margin="0 50 0 0" Width="369" Height="44" HorizontalAlignment="Center" Source="Resources/bar_code.png" />
+                <TextBlock HorizontalAlignment="Center" Margin="0 10 0 0" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" FontSize="20" Text="Sample barcode on Visitor ID"></TextBlock>
             </StackPanel>
 
-        </StackPanel>
+            <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20,0,0">
+                <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="36" Margin="0,0,0,10" Text="Scan Visitor or Student ID to Sign-out"></TextBlock>
+
+                <StackPanel>
+                    <wpfx1:WatermarkTextBox Style="{StaticResource WmTextField}" Name="txt_FirstName" Watermark="First Name" IsEnabled="False" />
+                    <wpfx1:WatermarkTextBox Style="{StaticResource WmTextField}" Name="txt_LastName" Watermark="Last Name" IsEnabled="False" />
+                    <TextBox InputMethod.IsInputMethodEnabled="False" TextWrapping="Wrap" Width="0" Name="txtBarcodeData" Text="97370-v" Opacity="0" Focusable="True" Height="0" KeyUp="txtBarcodeData_KeyUp" TextChanged="txtBarcodeData_TextChanged" />
+                    <Button Name="btnConfirm" IsEnabled="False" Style="{StaticResource MyButton}" Content="CONFIRM AND SUBMIT" Width="650" Margin="0 20 0 40" Click="Button_Click"/>
+                    <TextBlock Width="650" TextBlock.LineHeight="36" FontSize="24" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" Text="To sign out, please hold the visitor ID up to the scanning device with the barcode facing the device. Once you hear the beep, your visitor ID has been scanned properly. Press Submit to continue."></TextBlock>
+                </StackPanel>
+
+            </StackPanel>
+        </Grid>
 
     </DockPanel>
 
