--- a/WpfApplication1/WpfApplication1/ModalWindow.xaml
+++ b/WpfApplication1/WpfApplication1/ModalWindow.xaml
@@ -20,7 +20,7 @@
 
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
             <Label Margin="0,0,0,5">Enter Password:</Label>
-            <wpfx1:WatermarkPasswordBox MaxWidth="580" Style="{StaticResource WmPassword}" Name="txt_password" Watermark="Enter Password" Margin="0,0,0,40" Width="Auto" KeyDown="txt_password_KeyDown" />
+            <wpfx1:WatermarkPasswordBox InputScope="Number" MaxWidth="580" Style="{StaticResource WmPassword}" Name="txt_password" Watermark="Enter Password" Margin="0,0,0,40" Width="Auto" KeyDown="txt_password_KeyDown" />
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Style="{StaticResource MyButton}" Content="SUBMIT" Name="btnSubmit" Click="btnSubmit_Click"/>
