--- a/WpfApplication1/WpfApplication1/StudentSigninReason.xaml
+++ b/WpfApplication1/WpfApplication1/StudentSigninReason.xaml
@@ -25,23 +25,31 @@
 
         <StackPanel DockPanel.Dock="Right"></StackPanel>
 
-        <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center" MaxWidth="1200">
 
-            <TextBlock TextAlignment="Center" Width="960" Style="{StaticResource MaterialDesignDisplay1TextBlock}" Height="60"><Run Text="Reason for Sign In?"/></TextBlock>
-            
-            <Button Height="100" Name="btnOption1" Style="{StaticResource MarginButtonStyle}" Content="Reason 1" Tag="1" Click="btnOptionClick" />
-            <Button Height="100" Name="btnOption2" Style="{StaticResource MarginButtonStyle}" Content="Reason 2" Tag="2" Click="btnOptionClick" />
-            <Button Height="100" Name="btnOption3" Style="{StaticResource MarginButtonStyle}" Content="Reason 3" Tag="3" Click="btnOptionClick" />
+        <Grid MaxWidth="1200" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="60" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+        
+            <TextBlock Grid.Column="0" Grid.Row="0" TextAlignment="Center" Style="{StaticResource MaterialDesignDisplay1TextBlock}" Text="Reason for Sign In?" />
 
-            <Button Height="100" Name="btnOption4" Style="{StaticResource MarginButtonStyle}" Content="Reason 4" Tag="4" Click="btnOptionClick" />
-            <Button Height="100" Name="btnOption5" Style="{StaticResource MarginButtonStyle}" Content="Reason 5" Tag="5" Click="btnOptionClick" />
-            <Button Height="100" Name="btnOption6" Style="{StaticResource MarginButtonStyle}" Content="Reason 6" Tag="6" Click="btnOptionClick" />
+            <WrapPanel Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Button Height="100" Name="btnOption1" Style="{StaticResource MarginButtonStyle}" Content="Reason 1" Tag="1" Click="btnOptionClick" />
+                <Button Height="100" Name="btnOption2" Style="{StaticResource MarginButtonStyle}" Content="Reason 2" Tag="2" Click="btnOptionClick" />
+                <Button Height="100" Name="btnOption3" Style="{StaticResource MarginButtonStyle}" Content="Reason 3" Tag="3" Click="btnOptionClick" />
 
-            <Button Height="100" Name="btnOption7" Style="{StaticResource MarginButtonStyle}" Content="Reason 7" Tag="7" Click="btnOptionClick" />
-            <Button Height="100" Name="btnOption8" Style="{StaticResource MarginButtonStyle}" Content="Reason 8" Tag="8" Click="btnOptionClick" />
-            <Button Height="100" Name="btnOption9" Style="{StaticResource MarginButtonStyle}" Content="Reason 9" Tag="9" Click="btnOptionClick" />
+                <Button Height="100" Name="btnOption4" Style="{StaticResource MarginButtonStyle}" Content="Reason 4" Tag="4" Click="btnOptionClick" />
+                <Button Height="100" Name="btnOption5" Style="{StaticResource MarginButtonStyle}" Content="Reason 5" Tag="5" Click="btnOptionClick" />
+                <Button Height="100" Name="btnOption6" Style="{StaticResource MarginButtonStyle}" Content="Reason 6" Tag="6" Click="btnOptionClick" />
 
-        </WrapPanel>
-
+                <Button Height="100" Name="btnOption7" Style="{StaticResource MarginButtonStyle}" Content="Reason 7" Tag="7" Click="btnOptionClick" />
+                <Button Height="100" Name="btnOption8" Style="{StaticResource MarginButtonStyle}" Content="Reason 8" Tag="8" Click="btnOptionClick" />
+                <Button Height="100" Name="btnOption9" Style="{StaticResource MarginButtonStyle}" Content="Reason 9" Tag="9" Click="btnOptionClick" />
+            </WrapPanel>
+        </Grid>
     </DockPanel>
 </Page>
